modularized my design files, included mixins

--- a/src/design.scss
+++ b/src/design.scss
@@ -1,6 +1,11 @@
-$rootColor: lightblue;
-$headerColor: green;
-$fontColor: purple;
+
+@import './reset.scss';
+@import './core.scss';
+@import './mixins.scss';
+@import './variables.scss';
+
+
+
 
 body{
   background: lighten($rootColor, 2);
@@ -10,24 +15,31 @@ body{
     border-radius: 20px;
     text-align: center;
   }
+
   h1{
-      color:$fontColor;
-      font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      width: 50%;
-      margin-left: 25%;
-      text-align: center;
-      border: 5px solid black;
-      border-radius: 10px;
+    color:$fontColor;
+    font-size: 25px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    width: 50%;
+    text-align: center;
+    border: 10px solid $accentColor;
+    @include corners(10px);
+    margin: $marginSpace 25%;
+    padding: $paddingSpace;
   }
+  
   h2 {
-    color: orange;
-    font-size: 50px;
-    text-align: center;
-    border: 5px dashed red;
-    font-family: cursive;
-    width: 75%;
-    margin-left: 12.5%;
-    text-align: center;
+  color:$fontColor;
+  font-size: 50px;
+  text-align: center;
+  border: 5px solid $accentColor;
+  font-family: cursive;
+  width: 75%;
+  margin: $marginSpace 12.5%;
+  padding: $paddingSpace;
+  text-align: center;
+  @include corners(10px);
+  
   }
 
 }
